--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=khoa_luan
+DB_DATABASE=khoaluan123
 DB_USERNAME=root
 DB_PASSWORD=
 
