--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=khoaluan123
 APP_ENV=local
-APP_KEY=base64:yXR2bKgLw3bnKHbNaAf4vgVqTRjFpPM2nexNSM4+SAo=
+APP_KEY=base64:g/pmOXKIlX+8u9V1cQ8eeG0tA0F9ddZyZXm+IFIgIv8=
 APP_DEBUG=true
 APP_URL=http://localhost
 
